project-assessment-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-assessment-site
  namespace: test
spec:
  selector:
    app: project-assessment-site
  ports:
    - port: 80
      targetPort: 80
