project-assessment-site/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: test
   namespace: test
   annotations:
      ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host:
      http:
        paths:
          - path: /
            backend:
              serviceName: project-assessment-site
              servicePort: 80
